back file extension case sensitive

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ h3 {
 #showcase {
     padding: 50px 0;
     margin-top: 2px;
-    background: #eceded url(../images/kakku/SAM_4393.jpg);
+    background: #eceded url(../images/kakku/SAM_4393.JPG);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
